solc_ossfuzz_seed_corpus/test_solidity/test_144e0101d310eb9aff1fb6d8f9438bbc2b9fc77adf33a6137aedb547ac05e5e6_testdeleteusertype_sol.sol
type T0 is bytes32;
pragma solidity >= 0.0.0;
contract C0 {
  T0 immutable s1;
  function f() internal {
    delete s1;
  }
}
// ----
// TypeError 9767: (109-118): Unary operator delete cannot be applied to type user defined type T0
